--- a/app/views/layouts/main.slim
+++ b/app/views/layouts/main.slim
@@ -14,6 +14,7 @@ html lang="en" xmlns="http://www.w3.org/1999/xhtml"
 
     / STATIC ASSETS
     = favicon_tag 'favicon.ico'
+    link href='http://fonts.googleapis.com/css?family=Varela' rel='stylesheet'
     = stylesheet_link_tag 'bootstrap', 'main'
     = javascript_include_tag 'jquery.min', 'bootstrap.min'
 
