--- a/app/views/layouts/_header.slim
+++ b/app/views/layouts/_header.slim
@@ -1,2 +1,4 @@
 div class='navbar navbar-fixed-top'
   div class='navbar-inner'
+    div class='container'
+      = link_to 'PBS Finder', url('/', :index), :class => 'navbar-brand', :title => 'PBS Finder'
