--- a/public/pbsfinder/stylesheets/main.css
+++ b/public/pbsfinder/stylesheets/main.css
@@ -8,7 +8,7 @@ body {
 .main {
   min-height: 100%;
   height: auto !important;
-  margin: 0 auto -70px;
+  margin: 0 auto -50px;
   /* margin-bottom: minus footer's height */
   padding: 0 10px; }
 
@@ -20,20 +20,11 @@ body {
   /* same as the footer */ }
 
 footer {
-  margin-top: -70px;
-  height: 70px;
-  border-top: 1px solid #eee;
+  margin-top: -50px;
+  height: 50px;
+  border-top: 1px solid #6b6b6b;
   padding: 10px 10px 0;
-  -webkit-box-shadow: 0px 1px 22px #e5e5e5;
-  -moz-box-shadow: 0px 1px 22px #e5e5e5;
-  -o-box-shadow: 0px 1px 22px #e5e5e5;
-  -ms-box-shadow: 0px 1px 22px #e5e5e5;
-  box-shadow: 0px 1px 22px #e5e5e5;
-  background-image: -webkit-linear-gradient(whitesmoke, #eeeeee 30%, whitesmoke);
-  background-image: -moz-linear-gradient(whitesmoke, #eeeeee 30%, whitesmoke);
-  background-image: -o-linear-gradient(whitesmoke, #eeeeee 30%, whitesmoke);
-  background-image: -ms-linear-gradient(whitesmoke, #eeeeee 30%, whitesmoke);
-  background-image: linear-gradient(whitesmoke, #eeeeee 30%, whitesmoke); }
+  background-color: #333333; }
 
 footer p {
   margin-bottom: 0;
@@ -44,7 +35,13 @@ footer p {
   margin-right: 10px; }
 
 .footer-links-link {
-  color: #878787; }
+  text-shadow: 0px 1px 2px #030303;
+  color: #878787;
+  font-family: varela;
+  font-size: 1.2em;
+  text-transform: uppercase;
+  line-height: 25px;
+  margin-left: 15px; }
 
 .footer-links-link:hover {
   color: #777;
@@ -199,7 +196,8 @@ footer p {
   font-family: 'Varela', sans-serif;
   text-transform: uppercase;
   font-size: 2.5em;
-  line-height: 1em; }
+  line-height: 1em;
+  height: 32px; }
 
 /* --- End Application::TopBar --- */
 /* --- Begin Application::List --- */
@@ -308,6 +306,21 @@ footer p {
   display: block;
   margin: 5px auto;
   vertical-align: middle; }
+
+footer .brand li {
+  list-style: none;
+  font-family: Varela;
+  line-height: 24px;
+  display: inline-block; }
+  footer .brand li .brand-name {
+    text-shadow: 0px 1px 2px #030303;
+    text-transform: uppercase;
+    font-size: 1.4em;
+    margin-right: 5px;
+    color: #b3b3b3; }
+  footer .brand li .brand-author {
+    font-size: 1.15em;
+    text-shadow: 0px 1px 2px #030303; }
 
 /* --- End Application::Base --- */
 /* Android Google Galaxy Nexus, add others! */
