--- a/app/stylesheets/main.scss
+++ b/app/stylesheets/main.scss
@@ -270,7 +270,7 @@ footer .brand li {
     margin: 0 0 20px 0;
     padding: 0;
   }
-  .navbar-brand, .navbar-module, .navbar-edit-account, .navbar-logout {
+  .navbar-brand, .navbar-module, .navbar-edit-account, .navbar-log {
     float: left;
   }
   .navbar .nav {
@@ -285,6 +285,31 @@ footer .brand li {
   }
   footer {
     display: none;
+  }
+}
+.navbar-log {
+  .log-button {
+    font-family: Varela;
+    color: #428bca;
+    background: none;
+    font-size: 1.1em;
+    text-transform:uppercase;
+    border: none;
+    outline: 0;
+    padding: 15px;
+    &:hover {
+      text-decoration: none;
+      background-color: #eeeeee;
+    }
+  }
+}
+.big-title{
+  border-bottom: 1px solid #e5e5e5;
+  h1 {
+    font-family: Varela;
+    color: #428bca;
+    font-size: 1.8em;
+    text-transform: uppercase;
   }
 }
 /* -- End Application -- */
