--- a/app/views/layouts/main.slim
+++ b/app/views/layouts/main.slim
@@ -28,6 +28,10 @@ html lang="en" xmlns="http://www.w3.org/1999/xhtml"
         div class='main-wrapper'
           =  { :error => 'danger', :warning => 'warning', :success => 'success', :notice => 'info' }.map { |type, class_name| flash_tag(type, :class => "alert alert-#{class_name} fade in", :bootstrap => true) }.join.html_safe
           div class='row'
+            - if @big_title
+              div class='big-title'
+                h1
+                  = @big_title
             = yield
           div class='main-wrapper-push'
 
