--- a/webapp/app/views/accounts/_form.slim
+++ b/webapp/app/views/accounts/_form.slim
@@ -1,12 +1,12 @@
 - error = @account.errors.include?(:name)
 fieldset class='control-group#{error ? ' has-error' : ''}'
-  = f.label :name, :class => 'control-label'
+  = f.label 'First name', :class => 'control-label'
   div class='controls'
     = f.text_field :name, :class => 'form-control input-large input-with-feedback', :autofocus => true
     span class='help-inline' = error ? f.error_message_on(:name, :class => 'text-error') : pat(:example)
 - error = @account.errors.include?(:surname)
 fieldset class='control-group#{error ? ' has-error' : ''}'
-  = f.label :surname, :class => 'control-label'
+  = f.label 'Last name', :class => 'control-label'
   div class='controls'
     = f.text_field :surname, :class => 'form-control input-large input-with-feedback'
     span class='help-inline' = error ? f.error_message_on(:surname, :class => 'text-error') : pat(:example)
