Job controller base added.

--- a/webapp/app/stylesheets/main.scss
+++ b/webapp/app/stylesheets/main.scss
@@ -302,6 +302,9 @@ footer .brand li {
       background-color: #eeeeee;
     }
   }
+  .dropdown-menu .log-button {
+    font-size: 1.0em;
+  }
 }
 .big-title{
   border-bottom: 1px solid #e5e5e5;
