--- a/webapp/app/views/layouts/main.slim
+++ b/webapp/app/views/layouts/main.slim
@@ -15,8 +15,8 @@ html lang="en" xmlns="http://www.w3.org/1999/xhtml"
     / STATIC ASSETS
     = favicon_tag 'favicon.ico'
     link href='http://fonts.googleapis.com/css?family=Varela' rel='stylesheet'
-    = stylesheet_link_tag 'bootstrap', 'main'
-    = javascript_include_tag 'jquery.min', 'bootstrap.min'
+    = stylesheet_link_tag 'bootstrap-new', 'main'
+    =javascript_include_tag 'application', 'jquery.min', (Padrino.env == :production ? 'bootstrap/bootstrap.min' : %w[bootstrap/affix bootstrap/alert bootstrap/button bootstrap/carousel bootstrap/collapse bootstrap/dropdown  bootstrap/tooltip bootstrap/transition  bootstrap/modal bootstrap/popover bootstrap/scrollspy bootstrap/tab]), :application
 
     / PER PAGE ASSETS
     = yield_content :stylesheets
