--- a/webapp/app/stylesheets/jobs/list.scss
+++ b/webapp/app/stylesheets/jobs/list.scss
@@ -19,3 +19,54 @@
     width:130px;
   }
 }
+.pager {
+  margin-top:50px;
+  .next_page, .previous_page, a, em {
+    border-bottom-color: rgb(221, 221, 221);
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+    border-bottom-style: solid;
+    border-bottom-width: 1px;
+    border-left-color: rgb(221, 221, 221);
+    border-left-style: solid;
+    border-left-width: 1px;
+    border-right-color: rgb(221, 221, 221);
+    border-right-style: solid;
+    border-right-width: 1px;
+    border-top-color: rgb(221, 221, 221);
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    border-top-style: solid;
+    border-top-width: 1px;
+    box-sizing: border-box;
+    cursor: auto;
+    display: inline-block;
+    font-size: 14px;
+    height: 32px;
+    line-height: 20px;
+    list-style-image: none;
+    list-style-position: outside;
+    list-style-type: none;
+    padding-bottom: 5px;
+    padding-left: 14px;
+    padding-right: 14px;
+    padding-top: 5px;
+    background:none;
+    text-decoration:none;
+    &.disabled, &.current {
+      color: rgb(153, 153, 153);
+      &:hover {
+        color: rgb(153, 153, 153);
+        background:none;
+      }
+    }
+    &:hover {
+      color: rgb(42, 100, 150);
+      background-color: rgb(238, 238, 238);
+    }
+  }
+  .gap {
+    padding-left:5px;
+    padding-right:5px;
+  }
+}
