Some strings changed.

--- a/webapp/app/views/layouts/_header.slim
+++ b/webapp/app/views/layouts/_header.slim
@@ -20,7 +20,7 @@ div class='navbar navbar-fixed-top'
       ul class='nav navbar-nav pull-left'
         - if logged_in?
           <li class="dropdown navbar-log">
-            <a href="#" data-toggle="dropdown" class="dropdown-toggle log-button">Search <b class="caret"></b></a>
+            <a href="#" data-toggle="dropdown" class="dropdown-toggle log-button">Jobs <b class="caret"></b></a>
             <ul class="dropdown-menu">
               li class="navbar-log"
                 = link_to t('job.button.new'), url(:jobs, :new), :class => 'log-button'
