--- a/webapp/app/views/jobs/list.slim
+++ b/webapp/app/views/jobs/list.slim
@@ -38,7 +38,7 @@ div class="tabs-content"
         - @jobs.each do |job|
           tr class='list-row'
             td class='list-column list-selectable' = check_box_tag 'job_ids[]', :value => job.id, :class => 'list-selectable-checkbox'
-            td class='list-column br' = job.id
+            td class='list-column br' = link_to(job.id, url_for(:jobs, :job, job.id))
             td class='list-column br' = job.created_at.strftime("%F %H:%M")
             td class='list-column br' = job.species || 'N/A'
             td class='list-column' = job.description
