--- a/webapp/app/views/jobs/new.slim
+++ b/webapp/app/views/jobs/new.slim
@@ -1,3 +1,30 @@
+- content_for :stylesheets do
+  = stylesheet_link_tag 'jobs/new'
 div class="tabs-content"
+  div class="panel panel-info"
+    div class="panel-heading"
+      h3 class="panel-title" = t('job.create.notice.title')
+    table class="table"
+      tbody
+        tr class='list-row'
+          td class='list-column'
+            span class="list-title" = t('job.create.notice.notice1.title')
+          td class='list-column'
+            span = t('job.create.notice.notice1.content')
+        tr class='list-row'
+          td class='list-column'
+            span class="list-title" = t('job.create.notice.notice2.title')
+          td class='list-column'
+            span = t('job.create.notice.notice2.content')
+        tr class='list-row'
+          td class='list-column'
+            span class="list-title" = t('job.create.notice.notice3.title')
+          td class='list-column'
+            span = t('job.create.notice.notice3.content')
+        tr class='list-row'
+          td class='list-column'
+            span class="list-title" = t('job.create.notice.notice4.title')
+          td class='list-column'
+            span = t('job.create.notice.notice4.content')
   = form_for :job, url(:jobs, :create), :class => 'form-horizontal' do |f|
     = partial 'jobs/form', :locals => { :f => f }
