--- a/webapp/app/views/jobs/_form.slim
+++ b/webapp/app/views/jobs/_form.slim
@@ -10,8 +10,11 @@ fieldset class='control-group#{error ? ' has-error' : ''}'
   div class='controls'
     = f.text_area :query, :class => 'form-control input-large input-with-feedback', :rows => 6
     span class='help-inline' = error ? f.error_message_on(:query, :class => 'text-error') : t('job.example.id_list')
+  = hidden_field_tag 'job[email]', :value => false, :hidden => true, :id => 'mail-checkbox'
 
 div class="form-actions"
-  = f.submit t('register.button.create'), :class => 'btn btn-primary'
+  = f.submit t('job.create.button.create'), :class => 'btn btn-primary'
   |&nbsp;
-  = link_to t('register.button.cancel'), url(:jobs, :new), :class => 'btn btn-info'
+  = button_tag t('job.create.button.create_and_mail'), :class => 'btn btn-primary', :id => 'mail-submit'
+  |&nbsp;
+  = link_to t('job.create.button.cancel'), url(:jobs, :new), :class => 'btn btn-info'
