--- a/webapp/app/views/jobs/job.slim
+++ b/webapp/app/views/jobs/job.slim
@@ -2,7 +2,7 @@
   = stylesheet_link_tag 'jobs/job'
 - unless @job.completed
   - content_for :javascripts do
-    = javascript_include_tag 'check_job'
+    = javascript_include_tag 'jobs/check_job'
   div class="panel panel-info"
     div class="panel-heading"
       h3 class="panel-title" = t('job.view.notice.title')
