--- a/webapp/app/views/layouts/_footer.slim
+++ b/webapp/app/views/layouts/_footer.slim
@@ -1,5 +1,5 @@
 footer
-  div class="footer-wrapper container"
+  div class="footer-wrapper container-non-responsive"
     div class='pull-left brand'
       ul
         li
@@ -7,6 +7,7 @@ footer
         li
           p.brand-author Diogo Teixeira | 2014
     ul class='pull-right footer-links'
+      li = link_to 'Contact', url('/', :contact), :class => 'footer-links-link'
       li = link_to 'About', url('/', :about), :class => 'footer-links-link'
       li = link_to 'About me', 'http://diogoteixeira.eu', :class => 'footer-links-link'
       li = link_to 'Source code', 'https://github.com/dteixeira/PBSFinder', :class => 'footer-links-link'
