--- a/webapp/app/views/layouts/_header.slim
+++ b/webapp/app/views/layouts/_header.slim
@@ -1,28 +1,31 @@
-div class='navbar navbar-fixed-top'
-  div class='navbar-inner'
-    div class='container'
+div class='navbar navbar-fixed-top' id='navbar'
+  div class='container-non-responsive'
+    div class='navbar-inner'
       = link_to 'PBS Finder', url('/'), :class => 'navbar-brand', :title => 'PBS Finder'
 
-      ul class='nav navbar-nav pull-right'
-        - if logged_in?
-          li class='navbar-log'
-            = link_to t('register.button.update'), url(:accounts, :edit), :class => 'log-button'
+      div class='nav-menu'
+        ul class='nav nav-ul pull-right'
+          - if logged_in?
+            li class='navbar-log'
+              = link_to t('register.button.update'), url(:accounts, :edit), :class => 'log-button'
 
-          li class='navbar-log'
-            = form_tag url(:sessions, :destroy), :method => 'delete' do
-              = submit_tag(t('logout.button'), :class => 'log-button')
-        - else
-          li class='navbar-log'
-            = link_to t('register.button.goto'), url(:accounts, :new), :class => 'log-button'
-          li class='navbar-log'
-            = link_to t('login.button'), url(:sessions, :new), :class => 'log-button'
+            li class='navbar-log'
+              = form_tag url(:sessions, :destroy), :method => 'delete' do
+                = submit_tag(t('logout.button'), :class => 'log-button')
+          - else
+            li class='navbar-log'
+              = link_to t('register.button.goto'), url(:accounts, :new), :class => 'log-button'
+            li class='navbar-log'
+              = link_to t('login.button'), url(:sessions, :new), :class => 'log-button'
 
-      ul class='nav navbar-nav pull-left'
-        - if logged_in?
-          <li class="dropdown navbar-log">
-            <a href="#" data-toggle="dropdown" class="dropdown-toggle log-button">Jobs <b class="caret"></b></a>
-            <ul class="dropdown-menu">
-              li class="navbar-log"
-                = link_to t('job.button.new'), url(:jobs, :new), :class => 'log-button'
-              li class="navbar-log"
-                = link_to t('job.button.list'), url(:jobs, :list), :class => 'log-button'
+        ul class='nav nav-ul pull-left'
+          li class="navbar-log"
+            = link_to t('navigation.home'), url('/'), :class => 'log-button'
+          - if logged_in?
+            <li class="dropdown navbar-log">
+              <a href="#" data-toggle="dropdown" class="dropdown-toggle log-button">Jobs <b class="caret"></b></a>
+              <ul class="dropdown-menu">
+                li class="navbar-log"
+                  = link_to t('job.button.new'), url(:jobs, :new), :class => 'log-button'
+                li class="navbar-log"
+                  = link_to t('job.button.list'), url(:jobs, :list), :class => 'log-button'
