--- a/webapp/app/views/layouts/main.slim
+++ b/webapp/app/views/layouts/main.slim
@@ -9,14 +9,14 @@ html lang="en" xmlns="http://www.w3.org/1999/xhtml"
 
     / GENERAL DEFINITIONS
     meta content='text/html; charset=utf-8' http-equiv='Content-Type'
-    meta name='viewport' content='width=device-width,initial-scale=1'
+    /*meta name='viewport' content='width=device-width,initial-scale=1'*/
     title = @title.present? ? "#{@title} | PBS Tool" : "PBS Tool"
 
     / STATIC ASSETS
     = favicon_tag 'favicon.ico'
     link href='http://fonts.googleapis.com/css?family=Varela' rel='stylesheet'
     = stylesheet_link_tag 'bootstrap-new', 'main'
-    = javascript_include_tag 'application', 'jquery.min', (Padrino.env == :production ? 'bootstrap/bootstrap.min' : %w[bootstrap/affix bootstrap/alert bootstrap/button bootstrap/carousel bootstrap/collapse bootstrap/dropdown  bootstrap/tooltip bootstrap/transition  bootstrap/modal bootstrap/popover bootstrap/scrollspy bootstrap/tab]), :application
+    = javascript_include_tag 'jquery.min', 'application', (Padrino.env == :production ? 'bootstrap/bootstrap.min' : %w[bootstrap/affix bootstrap/alert bootstrap/button bootstrap/carousel bootstrap/collapse bootstrap/dropdown  bootstrap/tooltip bootstrap/transition  bootstrap/modal bootstrap/popover bootstrap/scrollspy bootstrap/tab]), :application
 
     / PER PAGE ASSETS
     = yield_content :stylesheets
@@ -25,7 +25,7 @@ html lang="en" xmlns="http://www.w3.org/1999/xhtml"
     body
       = partial 'layouts/header'
 
-      div class='container main'
+      div class='container-non-responsive main'
         div class='main-wrapper'
           =  { :error => 'danger', :warning => 'warning', :success => 'success', :notice => 'info' }.map { |type, class_name| flash_tag(type, :class => "alert alert-#{class_name} fade in", :bootstrap => true) }.join.html_safe
           div class='row'
