--- a/webapp/public/pbsfinder/stylesheets/main.css
+++ b/webapp/public/pbsfinder/stylesheets/main.css
@@ -290,6 +290,8 @@ footer .brand li {
 /*display: none;*/
 /*}*/
 /*}*/
+.navbar-log li {
+  display: block; }
 .navbar-log .log-button {
   font-family: Varela;
   color: #428bca;
