--- a/webapp/app/views/jobs/_form.slim
+++ b/webapp/app/views/jobs/_form.slim
@@ -1,6 +1,6 @@
 - error = @job.errors.include?(:description)
 fieldset class='control-group#{error ? ' has-error' : ''}'
-  = f.label 'Search job description', :class => 'control-label'
+  = f.label 'Job description', :class => 'control-label'
   div class='controls'
     = f.text_field :description, :class => 'form-control input-large input-with-feedback', :autofocus => true
     span class='help-inline' = error ? f.error_message_on(:description, :class => 'text-error') : t('job.example.description')
