--- a/webapp/app/views/layouts/main.slim
+++ b/webapp/app/views/layouts/main.slim
@@ -9,6 +9,7 @@ html lang="en" xmlns="http://www.w3.org/1999/xhtml"
 
     / GENERAL DEFINITIONS
     meta content='text/html; charset=utf-8' http-equiv='Content-Type'
+    link href='http://fonts.googleapis.com/css?family=Ubuntu:400,500' rel='stylesheet' type='text/css'
     /*meta name='viewport' content='width=device-width,initial-scale=1'*/
     title = @title.present? ? "#{@title} | PBS Tool" : "PBS Tool"
 
