--- a/webapp/app/views/layouts/main.slim
+++ b/webapp/app/views/layouts/main.slim
@@ -8,6 +8,7 @@ html lang="en" xmlns="http://www.w3.org/1999/xhtml"
     <![endif]-->
 
     / GENERAL DEFINITIONS
+    meta http-equiv="X-UA-Compatible" content="IE=10; IE=9; IE=8; IE=7; IE=EDGE"
     meta content='text/html; charset=utf-8' http-equiv='Content-Type'
     link href='http://fonts.googleapis.com/css?family=Ubuntu:400,500' rel='stylesheet' type='text/css'
     /*meta name='viewport' content='width=device-width,initial-scale=1'*/
