--- a/webapp/app/views/layouts/main.slim
+++ b/webapp/app/views/layouts/main.slim
@@ -3,9 +3,9 @@ html lang="en" xmlns="http://www.w3.org/1999/xhtml"
   head
 
     / IE9 COMPATIBILITY
-    <!--[if lt IE 9]>
-    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+    /*<!--[if lt IE 9]>*/
+    /*<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>*/
+    /*<![endif]-->*/
 
     / GENERAL DEFINITIONS
     meta http-equiv="X-UA-Compatible" content="IE=10; IE=9; IE=8; IE=7; IE=EDGE"
