--- a/webapp/public/pbsfinder/stylesheets/main.css
+++ b/webapp/public/pbsfinder/stylesheets/main.css
@@ -316,6 +316,11 @@ footer .brand li {
 .navbar-log .dropdown-menu .log-button {
   font-size: 1.1em; }
 
+table.floatThead-table {
+  border-top: none;
+  border-bottom: none;
+  background-color: #FFF; }
+
 .big-title {
   border-bottom: 1px solid #e5e5e5; }
   .big-title h1 {
