--- a/webapp/app/views/jobs/job.slim
+++ b/webapp/app/views/jobs/job.slim
@@ -29,8 +29,8 @@ div class="info"
     p class='description' = @job.description
 
   - if @job.species
-    div class="table-container table-responsive" id="protein-table-wrapper"
-      table class="table table-condensed table-hover" id="protein-table"
+    div class="table-container" id="protein-table-wrapper"
+      table class="table table-condensed" id="protein-table"
         thead
           tr
             th Gene
