--- a/webapp/app/stylesheets/jobs/job.scss
+++ b/webapp/app/stylesheets/jobs/job.scss
@@ -41,6 +41,7 @@
       }
     }
     tr {
+      border-bottom: solid 1px #dddddd;
       &.striped {
         background-color: #f9f9f9;
       }
@@ -52,6 +53,9 @@
           border-right:solid 1px #336DA0;
         }
       }
+    }
+    .bad-gene {
+      color:rgb(255, 73, 73);
     }
   }
 }
