--- a/webapp/app/views/jobs/list.slim
+++ b/webapp/app/views/jobs/list.slim
@@ -28,8 +28,10 @@ div class="tabs-content"
                         = hidden_field_tag :job_ids, :'data-delete-many-ids' => true
                         = submit_tag  pat(:delete), :class =>'list-menu-popover-delete-selected-btn btn btn-danger btn-small'
                         div class='btn btn-default btn-small cancel' = pat(:cancel)
-          th class='header br' = t('job.list.table.id')
+          th class='header br' = t('job.list.table.results')
           th class='header br' = t('job.list.table.date')
+          th class='header br' = t('job.list.table.ids')
+          th class='header br' = t('job.list.table.duration')
           th class='header br' = t('job.list.table.species')
           th class='header' = t('job.list.table.description')
           th class='header list-row-action-header'
@@ -38,8 +40,10 @@ div class="tabs-content"
         - @jobs.each do |job|
           tr class='list-row'
             td class='list-column list-selectable' = check_box_tag 'job_ids[]', :value => job.id, :class => 'list-selectable-checkbox'
-            td class='list-column br' = link_to(job.id, url_for(:jobs, :job, job.id))
+            td class='list-column br' = link_to(t('job.list.table.view_results'), url_for(:jobs, :job, job.id))
             td class='list-column br' = job.created_at.strftime("%F %H:%M")
+            td class='list-column br' = job.completed ? job.genes.size : 'N/A'
+            td class='list-column br' = job.completed && job.time ? Time.at(job.time).utc.strftime("%H:%M:%S") : 'N/A'
             td class='list-column br' = job.species || 'N/A'
             td class='list-column' = job.description
             td class='list-column list-row-action'
