--- a/webapp/public/pbsfinder/stylesheets/jobs/job.css
+++ b/webapp/public/pbsfinder/stylesheets/jobs/job.css
@@ -29,14 +29,18 @@
       background-color: #428bca;
       opacity: 0.8;
       border: solid 1px #428bca; }
-  .table-container .table tr.striped {
-    background-color: #f9f9f9; }
-  .table-container .table tr:hover {
-    opacity: 1;
-    background-color: #428bca; }
-    .table-container .table tr:hover td.match {
-      border-left: solid 1px #336DA0;
-      border-right: solid 1px #336DA0; }
+  .table-container .table tr {
+    border-bottom: solid 1px #dddddd; }
+    .table-container .table tr.striped {
+      background-color: #f9f9f9; }
+    .table-container .table tr:hover {
+      opacity: 1;
+      background-color: #428bca; }
+      .table-container .table tr:hover td.match {
+        border-left: solid 1px #336DA0;
+        border-right: solid 1px #336DA0; }
+  .table-container .table .bad-gene {
+    color: #ff4949; }
 
 th {
   white-space: nowrap;
