--- a/webapp/public/pbsfinder/stylesheets/jobs/job.css
+++ b/webapp/public/pbsfinder/stylesheets/jobs/job.css
@@ -5,6 +5,12 @@
   font-family: Varela;
   color: #428bca;
   font-size: 1.8em; }
+.general-info .stats {
+  font-family: Varela;
+  color: #428bca;
+  font-size: 1.2em; }
+.general-info .separator {
+  padding-bottom: 20px; }
 .general-info .description {
   text-align: justify;
   font-size: 1.2em; }
@@ -20,36 +26,55 @@
   overflow: auto;
   max-height: 500px;
   padding-right: 1px; }
-  .table-container .table td {
-    vertical-align: middle;
-    text-align: center; }
-    .table-container .table td.protein {
-      border: solid 1px #dddddd; }
-    .table-container .table td.match {
-      background-color: #428bca;
-      opacity: 0.8;
-      border: solid 1px #428bca; }
-    .table-container .table td.no-bind, .table-container .table td.no-bind.striped {
-      background-image: url("../../images/stripe.png");
-      background-repeat: repeat;
-      border: solid 1px #dddddd;
-      opacity: 1; }
-      .table-container .table td.no-bind:hover td, .table-container .table td.no-bind.striped:hover td {
-        background-color: #333333; }
-      .table-container .table td.no-bind td, .table-container .table td.no-bind.striped td {
-        border: none; }
-    .table-container .table td.bad-gene {
-      color: #ff4949; }
-  .table-container .table tr {
-    border-bottom: solid 1px #dddddd; }
-    .table-container .table tr.striped {
-      background-color: #f9f9f9; }
-    .table-container .table tr:hover {
-      opacity: 1;
-      background-color: #428bca; }
-      .table-container .table tr:hover td.match {
-        border-left: solid 1px #336DA0;
-        border-right: solid 1px #336DA0; }
+  .table-container .table {
+    margin-bottom: 0px; }
+    .table-container .table td {
+      vertical-align: middle;
+      text-align: center; }
+      .table-container .table td.protein {
+        border: solid 1px #dddddd; }
+      .table-container .table td.match {
+        background-color: #428bca;
+        opacity: 0.8;
+        border: solid 1px #428bca; }
+      .table-container .table td.no-bind, .table-container .table td.no-bind.striped {
+        background-image: url("../../images/stripe.png");
+        background-repeat: repeat;
+        border: solid 1px #dddddd;
+        opacity: 1; }
+        .table-container .table td.no-bind:hover td, .table-container .table td.no-bind.striped:hover td {
+          background-color: #333333; }
+        .table-container .table td.no-bind td, .table-container .table td.no-bind.striped td {
+          border: none; }
+      .table-container .table td.bad-gene {
+        color: #ff4949; }
+    .table-container .table tr {
+      border-bottom: solid 1px #dddddd; }
+      .table-container .table tr.striped {
+        background-color: #f9f9f9; }
+      .table-container .table tr:hover {
+        opacity: 1;
+        background-color: #428bca; }
+        .table-container .table tr:hover td.match {
+          border-left: solid 1px #336DA0;
+          border-right: solid 1px #336DA0; }
+
+.legend td {
+  padding: 10px 20px 10px 20px;
+  margin-top: 5px;
+  margin-bottom: 5px; }
+.legend .visual {
+  padding-left: 0; }
+.legend .divider {
+  border-left: solid 1px #b1b1b1;
+  padding-left: 20px;
+  padding-right: 0; }
+.legend .red {
+  color: #ff4949; }
+.legend .stripe {
+  width: 100px;
+  background-image: url("../../images/stripe.png");
+  background-repeat: repeat; }
 
 th {
   white-space: nowrap;
