--- a/webapp/app/views/jobs/job.slim
+++ b/webapp/app/views/jobs/job.slim
@@ -26,6 +26,17 @@
 
 div class="info"
   div class="general-info"
+    - if @job.species
+      div class="btn-group pull-right"
+        button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown"
+          span #{t('job.view.download')}
+          span class="caret"
+        ul class="dropdown-menu download-menu" role="menu"
+          li
+            = link_to 'CSV', url_for(:jobs, :job, @job.id, :format => :csv)
+          li
+            = link_to 'TSV', url_for(:jobs, :job, @job.id, :format => :tsv)
+
     p class='species' = @job.species ? "#{t('job.view.species')}: #{@job.species}" : (@job.completed ? "#{t('job.view.species')}: #{t('job.view.species_none')}" : "#{t('job.view.species')}: #{t('job.view.species_wait')}")
     - if @job.species && @job.time
       p class='stats'
