--- a/webapp/public/pbsfinder/stylesheets/jobs/job.css
+++ b/webapp/public/pbsfinder/stylesheets/jobs/job.css
@@ -14,6 +14,9 @@
 .general-info .description {
   text-align: justify;
   font-size: 1.2em; }
+.general-info .download-menu {
+  min-width: 0;
+  width: 100%; }
 
 .info {
   margin-top: 30px; }
