--- a/webapp/app/stylesheets/main.scss
+++ b/webapp/app/stylesheets/main.scss
@@ -156,6 +156,7 @@ footer p {
 .navbar-brand {
   margin-top: 7px;
   padding: 0px 15px;
+  padding-left:5px;
   font-family: 'Ubuntu', sans-serif;
   text-transform: uppercase;
   font-size: 2.5em;
@@ -353,6 +354,14 @@ table.floatThead-table {
     font-weight:300;
     font-size: 1.8em;
     text-transform: uppercase;
+  }
+}
+.logo {
+  padding-right: 0;
+  margin-top: 0;
+  padding-top: 0;
+  img {
+    height:50px;
   }
 }
 /* -- End Application -- */
