--- a/webapp/app/views/jobs/job.slim
+++ b/webapp/app/views/jobs/job.slim
@@ -29,7 +29,7 @@ div class="info"
     - if @job.species
       div class="btn-group pull-right"
         button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown"
-          span #{t('job.view.download')}
+          span = "#{t('job.view.download')} "
           span class="caret"
         ul class="dropdown-menu download-menu" role="menu"
           li
@@ -54,6 +54,8 @@ div class="info"
           td = t('job.view.legend_stripe')
           td class="red visual divider" GENE ID
           td = t('job.view.legend_red')
+          td class="blue visual divider" TRANSCRIPT ID
+          td = t('job.view.legend_blue')
 
     div class="table-container table-responsive" id="protein-table-wrapper"
       table class="table table-condensed table-hover" id="protein-table"
@@ -81,12 +83,12 @@ div class="info"
                   = gene.name ? "#{gene.ensembl_id} (#{gene.name})" : gene.ensembl_id
                 td
                   - trans = gene.transcripts.first
-                  = trans.name ? "#{trans.ensembl_id} (#{trans.name})" : trans.ensembl_id
+                  = link_to (trans.name ? "#{trans.ensembl_id} (#{trans.name})" : trans.ensembl_id), url(:jobs, :transcript, gene.id, trans.id)
                 td colspan="#{@job.bind_proteins.size}" class="no-bind"
                 - gene.transcripts.drop(1).each do |trans|
                   tr class="#{even ? 'striped' : ''}"
                     td
-                      = trans.name ? "#{trans.ensembl_id} (#{trans.name})" : trans.ensembl_id
+                      = link_to (trans.name ? "#{trans.ensembl_id} (#{trans.name})" : trans.ensembl_id), url(:jobs, :transcript, gene.id, trans.id)
                     td colspan="#{@job.bind_proteins.size}" class="no-bind"
 
             /* Normal gene */
@@ -98,7 +100,7 @@ div class="info"
                       = gene.name ? "#{gene.ensembl_id} (#{gene.name})" : gene.ensembl_id
                     - trans = gene.transcripts.first
                     td
-                      = trans.name ? "#{trans.ensembl_id} (#{trans.name})" : trans.ensembl_id
+                      = link_to (trans.name ? "#{trans.ensembl_id} (#{trans.name})" : trans.ensembl_id), url(:jobs, :transcript, gene.id, trans.id)
                     - trans.matches.each do |prot|
                       td class="#{prot ? 'match protein' : 'protein'}"
 
@@ -110,7 +112,7 @@ div class="info"
                 - gene.transcripts.each do |trans|
                   tr class="#{even ? 'striped' : ''}"
                     td
-                      = trans.name ? "#{trans.ensembl_id} (#{trans.name})" : trans.ensembl_id
+                      = link_to (trans.name ? "#{trans.ensembl_id} (#{trans.name})" : trans.ensembl_id), url(:jobs, :transcript, gene.id, trans.id)
                     - trans.matches.each do |prot|
                       td class="#{prot ? 'match protein' : 'protein'}"
 
